Faz parte da tela de login e termina de assistir os videos desta sessão

--- a/telaDeLogin/css/components/button.css
+++ b/telaDeLogin/css/components/button.css
@@ -5,6 +5,7 @@
     border-color: transparent;
     transition: var(--default-transition);
     padding: var(--gutter) var(--gutter-2);
+    font-size: .8rem
 }
 
 .btn-block{
