--- a/telaDeLogin/css/components/variables.css
+++ b/telaDeLogin/css/components/variables.css
@@ -15,6 +15,8 @@
     --gutter:8px;
     --gutter-2: calc( var(--gutter)*2);
     --gutter-3: calc( var(--gutter)*3);
+    --gutter-4: calc( var(--gutter)*4);
+    --gutter-5: calc( var(--gutter)*5);
     
     --sm: 480px; 
     --md: 768px;
