--- a/telaDeLogin/css/components/global.css
+++ b/telaDeLogin/css/components/global.css
@@ -8,3 +8,8 @@ html, body{
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
 }
+
+body {
+    background: url('../img/login.jpeg') no-repeat center;
+    background-size: cover;
+}
